--- a/faq.html
+++ b/faq.html
@@ -1,102 +1,87 @@
-<!DOCTYPE html>
-<html lang="bg">
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PoorCoin — FAQ</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    .faq-container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-    }
-    .faq-item {
-      margin-bottom: 10px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      overflow: hidden;
-    }
-    .faq-question {
-      width: 100%;
-      text-align: left;
-      background: #f5f5f5;
-      color: #222;
-      padding: 15px;
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
-      border: none;
-      outline: none;
-    }
-    .faq-answer {
-      display: none;
-      padding: 15px;
-      background: #fff;
-      font-size: 15px;
-      color: #333;
-    }
-    .faq-question.active {
-      background: #28a745;
-      color: #fff;
-    }
-  </style>
+  <link rel="icon" href="PoorCoin.png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <img src="PoorCoin.png" alt="PoorCoin Logo" class="logo">
-    <h1>PoorCoin (POOR) — Често задавани въпроси</h1>
-    <nav>
-      <a href="index.html">About</a>
-      <a href="roadmap.html">Roadmap</a>
-      <a href="faq.html">FAQ</a>
+<header class="site-header">
+  <div class="container header-bar">
+    <a class="brand" href="index.html">
+      <img src="PoorCoin.png" alt="PoorCoin Logo" class="brand-logo" />
+      <span>PoorCoin (POOR)</span>
+    </a>
+    <nav class="nav">
+      <a href="index.html#about">About</a>
+      <a href="index.html#tokenomics">Tokenomics</a>
       <a href="whitepaper.html">Whitepaper</a>
-      <a href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" class="btn">Buy</a>
+      <a href="roadmap.html">Roadmap</a>
+      <a class="active" href="faq.html">FAQ</a>
+      <a class="btn primary" target="_blank"
+         href="https://pancakeswap.finance/swap?outputCurrency=0x4B3336AABBbB057593a02a588210D56F6e6adc281">Buy</a>
     </nav>
-  </header>
+  </div>
+</header>
 
-  <main>
-    <div class="faq-container">
-      <div class="faq-item">
-        <button class="faq-question">1. Какво е PoorCoin?</button>
-        <div class="faq-answer">
-          <p>PoorCoin (POOR) е децентрализиран meme токен, създаден за общността на BNB Smart Chain.</p>
-        </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-question">2. Как да купя PoorCoin?</button>
-        <div class="faq-answer">
-          <p>Може да купите POOR директно чрез PancakeSwap, като използвате официалния контракт адрес.</p>
-        </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-question">3. Колко е общото предлагане?</button>
-        <div class="faq-answer">
-          <p>Общото предлагане е 1,000,000,000 POOR.</p>
-        </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-question">4. Има ли екип зад PoorCoin?</button>
-        <div class="faq-answer">
-          <p>PoorCoin е community-driven проект. Всичко се движи от общността.</p>
-        </div>
-      </div>
-    </div>
-  </main>
+<main class="container">
+  <h1 class="page-title">Frequently Asked Questions</h1>
 
-  <footer>
-    <p>© 2025 PoorCoin | Built by the community</p>
-  </footer>
+  <section class="card">
+    <details open class="faq-item">
+      <summary>1) What is PoorCoin (POOR)?</summary>
+      <p>PoorCoin is a community-driven meme token on <strong>BNB Smart Chain (BEP-20)</strong>.
+         We aim to keep things fun, transparent and fair while we experiment, learn and grow together.</p>
+    </details>
 
-  <script>
-    const questions = document.querySelectorAll(".faq-question");
-    questions.forEach(q => {
-      q.addEventListener("click", () => {
-        q.classList.toggle("active");
-        const answer = q.nextElementSibling;
-        answer.style.display = answer.style.display === "block" ? "none" : "block";
-      });
-    });
-  </script>
+    <details class="faq-item">
+      <summary>2) How do I buy POOR?</summary>
+      <p>Use <a target="_blank"
+        href="https://pancakeswap.finance/swap?outputCurrency=0x4B3336AABBbB057593a02a588210D56F6e6adc281">PancakeSwap</a>.
+         Always double-check the contract address before trading:</p>
+      <code class="code-block">0x4B3336AABBbB057593a02a588210D56F6e6adc281</code>
+      <p>You can also add the token to MetaMask with one click from the homepage Quick Links.</p>
+    </details>
+
+    <details class="faq-item">
+      <summary>3) What’s the total supply?</summary>
+      <p><strong>1,000,000,000 POOR</strong>. Current on-chain figures are shown on BscScan and our homepage.</p>
+    </details>
+
+    <details class="faq-item">
+      <summary>4) Is there a team or presale?</summary>
+      <p>PoorCoin is a <strong>community project</strong>. There is no presale; fair public launch.
+         Decisions and future steps are discussed openly with the community.</p>
+    </details>
+
+    <details class="faq-item">
+      <summary>5) Where can I follow updates?</summary>
+      <p>
+        <a class="pill" target="_blank" href="https://t.me/poorcoin_bsc">Telegram</a>
+        <a class="pill" target="_blank" href="https://x.com/SeeeskoTodorov">X (Twitter)</a>
+        <a class="pill" target="_blank" href="https://bscscan.com/token/0x4B3336AABBbB057593a02a588210D56F6e6adc281">BscScan</a>
+        <a class="pill" target="_blank" href="https://www.dextools.io/app/en/bnb">DEXTools</a>
+      </p>
+    </details>
+
+    <details class="faq-item">
+      <summary>6) Is this financial advice?</summary>
+      <p>No. POOR is a meme/community token. Nothing on this website is financial advice.
+         Always do your own research and never trade what you can’t afford to lose.</p>
+    </details>
+  </section>
+
+  <p style="margin-top:16px">
+    ← <a href="index.html">Back to Homepage</a>
+  </p>
+</main>
+
+<footer class="site-footer">
+  <div class="container">
+    <p>© 2025 PoorCoin · Built by the community</p>
+  </div>
+</footer>
 </body>
 </html>
